crates/lash-cli/tests/snapshots/regression_tests__agent_prompt_output.snap
---
source: crates/lash-cli/tests/regression_tests.rs
expression: normalized
---
┓    ┓
┃ ┏┓┏┣┓
┗┛┗┻┛┛┗
# Lash Agent Usage Guide

## Overview

Lash is a minimalist, Markdown-native task tracker where:
- Markdown files are the single source of truth
- Tasks are hierarchical checkbox lists with annotations
- Directory structure provides implicit hierarchy (parent directories depend on children)
- SQLite provides fast indexing and search (fully reconstructible from Markdown)
- Format is strictly enforced by linting for predictability

## Recommended Workflow

When working with Lash task files, follow this workflow for consistent results:

1. **Discover** - Understand the project structure first
   ```bash
   lash status                   # Get quick overview of current work
   lash list --tree              # See task hierarchy
   lash search "relevant term"   # Find related tasks
   ```

2. **Read** - Open and understand the file before editing
   - Check existing task structure and annotations
   - Note the file's `@id`, `@labels`, and dependencies
   - Review contextual notes for requirements

3. **Modify** - Make your changes following the format specification
   - Add tasks with proper checkbox syntax: `- [ ] Task description`
   - Use 2-space indentation for subtasks
   - Add contextual notes (plain bullets) for requirements

4. **Validate** - Always lint after editing
   ```bash
   lash lint path/to/file.md    # Validate immediately after changes
   ```

5. **Index** - Update the database
   ```bash
   lash index                    # Rebuild index to reflect changes
   ```

## Project Structure

Lash projects follow these conventions:

- **Index file**: `tasks/tasks.md` or `lash.index.md` at project root
- **Task files**: Usually under `tasks/` directory
- **Database**: `.lash/lash.db` (auto-generated, gitignore this)
- **Config**: `.lash/config.toml` or `~/.lash/config.toml`

To find the project structure:
```bash
lash list --tree    # Shows all task files and hierarchy
```

## File Format

# Lash Task File Format

Lash task file format - hierarchical Markdown checkboxes with annotations

**Version:** 1.0

## Annotations

Task files support the following metadata annotations:

- `@id`: Unique identifier within the file
  - Example: `@id: feature-auth`
- `@labels`: Comma-separated tags for cross-cutting organization
  - Example: `@labels: backend, security`
- `@owner`: Person or agent responsible for this task
  - Example: `@owner: alice`
- `@created`: Creation date in YYYY-MM-DD format
  - Example: `@created: 2025-01-15`
- `@estimate`: Time estimate for completion
  - Example: `@estimate: 2d`
- `@depends-on`: Cross-file dependency reference
  - Example: `@depends-on: path/to/file.md#task:id`
- `@agent-note`: Hints or instructions for AI agents
  - Example: `@agent-note: Use existing auth patterns`
- `@doc`: Link to documentation resource (informational, non-blocking)
  - Example: `@doc: ../docs/design.md#section-7`

## Task Status Values

- `[ ]` (open) - Task not yet started
- `[>]` (in-progress) - Task actively being worked on
- `[x]` (done) - Task completed successfully
- `[-]` (waived) - Task marked as not applicable or cancelled
- `[!]` (blocked) - Task blocked by dependencies or external factors

## Constraints

- **unique_ids**: Task IDs must be unique within each file (per-file uniqueness)
- **max_depth**: Maximum nesting depth for task hierarchies (3-4 levels)
- **status_consistency**: Parent tasks complete only when all children are done or waived (hierarchical consistency)
- **valid_dependencies**: Dependency references must point to existing tasks (resolvable references)
- **contextual_notes**: Plain bullets (without checkboxes) nested under tasks provide context, requirements, or acceptance criteria. Notes cannot have children. (informational only, not actionable)

## Allowed Operations

### add_task

Add a new task to the hierarchy

```markdown
- [ ] New task description
```

### update_status

Mark a task as done, waived, or blocked

```markdown
- [x] Completed task
```

### add_subtask

Add a child task (indent with 2 spaces)

```markdown
  - [ ] Subtask description
```

### add_annotation

Add metadata annotation to a task or file

```markdown
@labels: backend, api
```

### add_dependency

Link to a task in another file

```markdown
@depends-on: core/auth.md#task:login
```

### waive_task

Mark a task as not applicable

```markdown
- [-] Task no longer needed
```

### add_doc_reference

Link to documentation resource for context

```markdown
@doc: docs/design.md#section-name
```

### add_contextual_note

Add inline context or requirements under a task using plain bullets (no checkbox). Notes are informational and not tracked for completion.

```markdown
- [ ] Implement payment gateway
  - Use Stripe API v3
  - Support credit card and ACH payments
```


## Examples

### Minimal Valid File

```markdown
# Feature: User Authentication

@id: feature-auth
@labels: backend, security
@owner: alice

## Description

Implement secure user authentication using industry-standard practices.
This includes password hashing with bcrypt and JWT tokens for session management.

## Tasks

- [ ] Implement login endpoint
  - Use bcrypt with cost factor 12 for password hashing
  - JWT tokens should expire after 24 hours
  - [ ] Add password hashing
  - [ ] Add JWT token generation
- [ ] Add user registration
  - Validate email format before storing
  - Send confirmation email on registration
- [x] Set up database schema
```

### File with Dependencies

```markdown
# Feature: User Profile Page

@id: feature-profile
@labels: frontend
@depends-on: backend/auth.md#task:feature-auth

## Tasks

- [ ] Design profile UI
  - [ ] Create mockups
  - [ ] Get design approval
- [ ] Implement profile component
  - [ ] Fetch user data from API
  - [ ] Display user information
- [ ] Add edit functionality
```

### File with Documentation References

```markdown
# Feature: Payment Processing

@id: feature-payments
@labels: backend, billing
@doc: ../docs/design-doc.md#payment-flow
@doc: ../docs/pci-compliance.md

## Tasks

- [ ] Implement payment gateway integration
  @doc: ../docs/stripe-api.md#webhooks
  - [ ] Set up webhook handlers
  - [ ] Implement payment intent creation
- [ ] Add invoice generation
  @doc: ../docs/invoice-template.md
- [x] Set up billing database schema
```

## CLI Quick Reference

```bash
# Project Setup
lash init                      # Initialize a new Lash project (creates lash.index.md)

# Discovery & Navigation
lash status                    # Show project status summary (in-progress, blocked, recent)
lash status --compact          # Minimal output for agents
lash list                      # List all tasks
lash list --tree               # Show task hierarchy
lash list --label backend      # Filter by label
lash list --status open        # Filter by status (open, done, blocked, waived)
lash search <QUERY>             # Full-text search tasks and descriptions
lash show <ID>                  # Show task/file details: agent note, deps status, children (--short for terse)

# Task Modification
lash add <DESCRIPTION>          # Add a new task (--file, --label, --id, --depends-on)
lash start <ID>                 # Mark a task as in-progress
lash complete <ID>              # Mark task as done (--cascade for child tasks)
lash waive <ID>                 # Mark task as waived/not applicable (--cascade, --reason)
lash update <ID>                # Edit title/labels/owner/estimate/agent-note/depends-on

# Validation & Formatting
lash lint [PATH...]             # Validate task files (run after every edit!)
lash lint --fix                 # Auto-fix some lint errors
lash format [PATH...]           # Normalize formatting

# Indexing
lash index                      # Update SQLite index after changes
lash check-index                # Verify database consistency
lash migrate-ids                # Show references left dangling by an ID rule change
lash migrate-ids --write        # Rewrite those references

# Dependencies & Links
lash graph                      # Show dependency graph (ascii)
lash graph --format dot         # Export as DOT/Graphviz
lash check-links                # Find broken references
lash check-links --fix          # Auto-fix broken references

# Agent Integration & Config
lash agent-prompt               # Generate context-minimized prompt for current project
lash skill install --target T   # Install Lash skill into a coding agent (claude/codex/cursor/agents-md)
lash config <SUBCOMMAND>        # Manage configuration (get, set, list, path)

# Error Help
lash explain <CODE>             # Explain error code (e.g., E001)
lash explain --list             # List all error codes
```

## Safety Guidelines

When working with Lash files:

1. **Always run `lash lint` after modifications** to validate your changes
2. **Respect depth limits** (3-4 levels maximum for task hierarchies)
3. **Don't break dependency references** - ensure `@depends-on` targets exist
4. **Maintain status consistency** - parent tasks complete only when children are done/waived
5. **Use unique IDs** within each file
6. **Run `lash index`** after making changes to update the search index
7. **Keep `@doc` references valid** - ensure referenced documentation files exist

### `@doc:` Fragment Slugs

When a `@doc:` annotation includes a `#fragment`, Lash matches it against the
target document's headings using case- and punctuation-insensitive
normalization: lowercase the text, treat `-` as a word separator, then drop
every character that is not alphanumeric or whitespace (`<`, `>`, `/`, `.`,
`_`, `(`, `)`, backticks, etc. are stripped *without* introducing a hyphen).
For example, the heading ``Pack manifest (`<pack>/SKILL.md`)`` matches the
fragment `pack-manifest-packskillmd`. Run
`lash explain W_SEM_DOC_FRAGMENT` for full details.

## Common Issues & Recovery

### Lint Errors

| Code | Issue | Fix |
|------|-------|-----|
| E001 | Duplicate task ID | Ensure `@id` values are unique within each file |
| E002 | Invalid dependency | Verify `@depends-on` target file and task exist |
| E003 | Max depth exceeded | Flatten hierarchy (max 3-4 levels) |
| E004 | Invalid status | Use valid checkbox: `[ ]`, `[x]`, `[-]`, `[!]` |

Run `lash explain <CODE>` for detailed explanations.

### Index Out of Sync

If search results seem stale or incorrect:
```bash
lash index --force    # Force full reindex
lash check-index      # Verify consistency
```

### Task IDs That Moved

A task without an explicit `@id:` gets its ID derived from its title, so a
release that changes the derivation rules moves every such ID. `lash index`
detects this, re-derives the stored IDs, and records what each one used to be.
References written against the old IDs stop resolving at that moment:

```bash
lash migrate-ids            # Show what changed and which references it affects
lash migrate-ids --write    # Rewrite the references, then re-index
```

`lash check-index` reports stored IDs that no longer match the current rules,
and `lash lint` says when an unresolved reference is one of these rather than a
typo. Pin an ID with `@id:` to keep it stable across future changes.

### Broken References

If `@depends-on` or `@doc` references are broken:
```bash
lash check-links              # Find broken references
lash check-links --fix        # Attempt auto-fix
```
