crates/lash-cli/tests/snapshots/regression_tests__check_links_stdout.snap
---
source: crates/lash-cli/tests/regression_tests.rs
expression: normalized_stdout
---
┓    ┓
┃ ┏┓┏┣┓
┗┛┗┻┛┛┗
No broken links found!
