crates/lash-cli/tests/snapshots/regression_tests__error_invalid_status_stderr.snap
---
source: crates/lash-cli/tests/regression_tests.rs
expression: normalized_stderr
---
Error parsing ./invalid.md: parse error: Invalid checkbox status '?': expected one of ' ' (space), 'x', 'X', '-', or '!'

Checked 2 files: 1 errors, 0 warnings, 0 info, 0 hints
