crates/lash-cli/tests/snapshots/regression_tests__error_invalid_status_stdout.snap
---
source: crates/lash-cli/tests/regression_tests.rs
expression: normalized_stdout
---
┓    ┓
┃ ┏┓┏┣┓
┗┛┗┻┛┛┗
error[E_PARSE]: Failed to parse file: parse error: Invalid checkbox status '?': expected one of ' ' (space), 'x', 'X', '-', or '!'
  at ./invalid.md:1:1

Summary:
  1 errors, 0 warnings, 0 info, 0 hints
  1 files affected
