crates/lash-cli/tests/snapshots/regression_tests__graph_medium_project.snap
---
source: crates/lash-cli/tests/regression_tests.rs
expression: normalized
---
┓    ┓
┃ ┏┓┏┣┓
┗┛┗┻┛┛┗
─── medium-project 
├── [ ] API docs
│   └── [ ] Documentation #docs
├── [x] Database schema
│   └── [ ] Backend development #backend
│       ├── [ ] API implementation
│       │   └── (cycle)
│       └── [ ] Backend tests
│           └── (cycle)
├── [ ] Production deployment
│   └── [ ] Deployment #ops
├── [ ] Staging environment
│   └── [ ] Deployment #ops
├── [ ] State management
│   └── [ ] Frontend development #frontend
│       └── [ ] Frontend tests
│           └── (cycle)
├── [ ] UI components
│   └── [ ] Frontend development #frontend
│       └── [ ] Frontend tests
│           └── (cycle)
└── [ ] User guide
    └── [ ] Documentation #docs

─── backend.api 
├── [ ] Example requests
│   └── [ ] Add API documentation #docs
├── [x] JWT token generation
│   └── [ ] Implement authentication #security
│       ├── [ ] OAuth2 integration #p1
│       │   └── (cycle)
│       └── [ ] Session management
│           └── (cycle)
├── [ ] OpenAPI spec
│   └── [ ] Add API documentation #docs
├── [ ] Task endpoints
│   └── [ ] Implement CRUD endpoints #core
│       └── [ ] Project endpoints
│           └── (cycle)
└── [x] User endpoints
    └── [ ] Implement CRUD endpoints #core
        └── [ ] Project endpoints
            └── (cycle)

─── backend.database 
├── [x] Add indexes
│   └── [x] Performance optimization #performance
├── [x] Connection pooling
│   └── [x] Add database layer #core
│       └── [x] Transaction support
│           └── (cycle)
├── [x] Migration framework
│   └── [x] Set up migrations #infrastructure
│       ├── [x] Initial schema migration
│       │   └── (cycle)
│       └── [x] Seed data
│           └── (cycle)
├── [x] Query builders
│   └── [x] Add database layer #core
│       └── [x] Transaction support
│           └── (cycle)
└── [x] Query optimization
    └── [x] Performance optimization #performance

─── backend.tests 
├── [x] API endpoint tests
│   └── [ ] Integration tests #integration-testing
│       └── [ ] Auth flow tests
│           └── (cycle)
├── [ ] Database integration tests
│   └── [ ] Integration tests #integration-testing
│       └── [ ] Auth flow tests
│           └── (cycle)
├── [ ] Load testing
│   └── [ ] Performance tests #performance
├── [x] Model tests
│   └── [ ] Unit tests #unit-testing
│       ├── [ ] Service tests
│       │   └── (cycle)
│       └── [ ] Utility tests
│           └── (cycle)
└── [ ] Stress testing
    └── [ ] Performance tests #performance

─── docs.api 
├── [ ] cURL examples
│   └── [ ] Code examples #examples
│       └── [ ] Python examples
│           └── (cycle)
├── [ ] Getting started
│   └── [ ] API guide #guides
│       ├── [ ] Authentication guide
│       │   └── (cycle)
│       ├── [ ] Rate limiting
│       │   └── (cycle)
│       └── [ ] Error handling
│           └── (cycle)
└── [ ] JavaScript examples
    └── [ ] Code examples #examples
        └── [ ] Python examples
            └── (cycle)

─── docs.user-guide 
├── [ ] Best practices
│   └── [ ] FAQ #support
├── [ ] Common questions
│   └── [ ] FAQ #support
├── [ ] First project
│   └── [ ] Tutorial #tutorials
│       └── [ ] Advanced features
│           └── (cycle)
├── [ ] Task management
│   └── [ ] Feature documentation #features
│       ├── [ ] Project organization
│       │   └── (cycle)
│       ├── [ ] Collaboration
│       │   └── (cycle)
│       └── [ ] Search and filtering
│           └── (cycle)
├── [ ] Team workflow
│   └── [ ] Tutorial #tutorials
│       └── [ ] Advanced features
│           └── (cycle)
└── [ ] Troubleshooting
    └── [ ] FAQ #support

─── frontend.components 
├── [x] Button
│   └── [ ] Implement base components #components
│       ├── [x] Input
│       │   └── (cycle)
│       ├── [x] Card
│       │   └── (cycle)
│       ├── [ ] Modal
│       │   └── (cycle)
│       └── [ ] Dropdown
│           └── (cycle)
├── [ ] Login form
│   └── [ ] Implement feature components #features
│       ├── [ ] Task detail
│       │   └── (cycle)
│       └── [ ] Project dashboard
│           └── (cycle)
├── [ ] Task list
│   └── [ ] Implement feature components #features
│       ├── [ ] Task detail
│       │   └── (cycle)
│       └── [ ] Project dashboard
│           └── (cycle)
├── [x] Unit tests
│   └── [ ] Add component tests #testing
└── [ ] Visual regression tests
    └── [ ] Add component tests #testing

─── frontend.state 
├── [ ] Action tests
│   └── [ ] Add state tests #testing
├── [x] API client
│   └── [ ] Add API integration #api
│       ├── [ ] Caching strategy
│       │   └── (cycle)
│       └── [ ] Error handling
│           └── (cycle)
├── [x] Auth state
│   └── [ ] Implement state slices #state
│       ├── [ ] Tasks state
│       │   └── (cycle)
│       ├── [ ] Projects state
│       │   └── (cycle)
│       └── [ ] UI state
│           └── (cycle)
├── [ ] Data fetching
│   └── [ ] Add API integration #api
│       ├── [ ] Caching strategy
│       │   └── (cycle)
│       └── [ ] Error handling
│           └── (cycle)
├── [ ] Reducer tests
│   └── [ ] Add state tests #testing
└── [ ] Selector tests
    └── [ ] Add state tests #testing

─── frontend.tests 
├── [x] Base component tests
│   └── [ ] Component tests #component-testing
│       ├── [ ] Feature component tests
│       │   └── (cycle)
│       └── [ ] Integration tests
│           └── (cycle)
├── [ ] Critical paths
│   └── [ ] E2E tests #e2e-testing
│       └── [ ] Error scenarios
│           └── (cycle)
├── [ ] Snapshot tests
│   └── [ ] Visual tests #visual-testing
├── [ ] User flows
│   └── [ ] E2E tests #e2e-testing
│       └── [ ] Error scenarios
│           └── (cycle)
└── [ ] Visual regression
    └── [ ] Visual tests #visual-testing
