crates/lash-cli/tests/snapshots/regression_tests__lint_200_tasks_stderr.snap
---
source: crates/lash-cli/tests/regression_tests.rs
expression: normalized_stderr
---
Checked 2 files: 0 errors, 1 warnings, 0 info, 0 hints
