crates/lash-cli/tests/snapshots/regression_tests__lint_200_tasks_stdout.snap
---
source: crates/lash-cli/tests/regression_tests.rs
expression: normalized_stdout
---
./many.md:0:0: warning[W_INDEX_ORPHAN]: File './many.md' is not referenced in the root index
  help: Add './many.md' to ./lash.index.md or move to an archive directory
[32m✓ Linting passed (with warnings)[39m
