crates/lash-cli/tests/snapshots/regression_tests__lint_deeply_nested_stderr.snap
---
source: crates/lash-cli/tests/regression_tests.rs
expression: "normalize_output(&stderr, project.path())"
---
Checked 9 files: 0 errors, 8 warnings, 0 info, 0 hints
