crates/lash-cli/tests/snapshots/regression_tests__lint_flat_project_stderr.snap
---
source: crates/lash-cli/tests/regression_tests.rs
expression: "normalize_output(&stderr, project.path())"
---
Checked 10 files: 0 errors, 10 warnings, 0 info, 0 hints
